// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> component renders simple form 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-2:has(input[disabled]) i,
.emotion-2:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-2:has(input[readonly]:not(input[disabled])) i,
.emotion-2:has(input[readonly]:not(input[disabled])) label,
.emotion-2:has(input[readonly]:not(input[disabled])) label>span {
  color: #696969;
}

.emotion-2 false input[type="search"]::-webkit-search-decoration,
.emotion-2 input[type="search"]::-webkit-search-cancel-button,
.emotion-2 input[type="search"]::-webkit-search-results-button,
.emotion-2 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0;
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #696969;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  color: #252525;
  background-color: #e6e6e6;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-5:focus-within,
.emotion-5:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-5:hover:([disabled]) {
  border: 1px solid #c5c5c5;
}

.emotion-5:has(input[readonly]:not([disabled])) {
  background-color: #f2f2f2;
  border: 1px solid #e6e6e6;
}

.emotion-5:has(input[readonly]:not([disabled])):focus-within,
.emotion-5:has(input[readonly]:not([disabled])):hover {
  border: 1px solid #00677f;
}

.emotion-5:has(input[disabled]),
.emotion-5:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-5:has(input[disabled]):hover,
.emotion-5:has(input[disabled])>*:hover {
  border-color: #c5c5c5;
}

.emotion-5:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-5:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-5:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-5:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-5:has(input[disabled]) input::placeholder,
.emotion-5:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-6 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  color: #252525;
  padding: 28px 12px 12px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:-moz-read-only {
  color: #696969;
}

.emotion-6:read-only {
  color: #696969;
}

.emotion-6 input:-webkit-autofill,
.emotion-6 input:-webkit-autofill:hover,
.emotion-6 input:-webkit-autofill:focus,
.emotion-6 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-6[readonly]::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6[readonly]::-moz-placeholder {
  color: transparent;
}

.emotion-6[readonly]:-ms-input-placeholder {
  color: transparent;
}

.emotion-6[readonly]:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6[readonly]:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6[readonly]:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6[readonly]::placeholder,
.emotion-6[readonly]:focus::placeholder {
  color: transparent;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:disabled {
  color: #a9a9a9;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2"
      data-testid="label-1-text-field"
    >
      <div
        class="emotion-3"
      >
        <label
          class="emotion-4"
          data-testid="label-field"
          for="label-1"
          scale="standard"
        >
          label 1
        </label>
        <div
          class="emotion-5"
          data-testid="label-1-text-field-wrapper"
        >
          <input
            class="emotion-6"
            data-error="false"
            data-testid="label-1-text-field-input"
            id="label-1"
            name="label-1"
            scale="standard"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-2"
      data-testid="label-2-text-field"
    >
      <div
        class="emotion-3"
      >
        <label
          class="emotion-4"
          data-testid="label-field"
          for="label-2"
          scale="standard"
        >
          label 2
        </label>
        <div
          class="emotion-5"
          data-testid="label-2-text-field-wrapper"
        >
          <input
            class="emotion-6"
            data-error="false"
            data-testid="label-2-text-field-input"
            id="label-2"
            name="label-2"
            scale="standard"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a disabled form group 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #252525;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 0.5;
  pointer-events: none;
}

@media only screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-6:has(input[disabled]) i,
.emotion-6:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-6:has(input[readonly]:not(input[disabled])) i,
.emotion-6:has(input[readonly]:not(input[disabled])) label,
.emotion-6:has(input[readonly]:not(input[disabled])) label>span {
  color: #696969;
}

.emotion-6 false input[type="search"]::-webkit-search-decoration,
.emotion-6 input[type="search"]::-webkit-search-cancel-button,
.emotion-6 input[type="search"]::-webkit-search-results-button,
.emotion-6 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0;
}

.emotion-8 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #696969;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  color: #252525;
  background-color: #e6e6e6;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-9:focus-within,
.emotion-9:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-9:hover:([disabled]) {
  border: 1px solid #c5c5c5;
}

.emotion-9:has(input[readonly]:not([disabled])) {
  background-color: #f2f2f2;
  border: 1px solid #e6e6e6;
}

.emotion-9:has(input[readonly]:not([disabled])):focus-within,
.emotion-9:has(input[readonly]:not([disabled])):hover {
  border: 1px solid #00677f;
}

.emotion-9:has(input[disabled]),
.emotion-9:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-9:has(input[disabled]):hover,
.emotion-9:has(input[disabled])>*:hover {
  border-color: #c5c5c5;
}

.emotion-9:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled]) input::placeholder,
.emotion-9:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-10 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  color: #252525;
  padding: 28px 12px 12px;
}

.emotion-10:focus {
  outline: none;
}

.emotion-10:-moz-read-only {
  color: #696969;
}

.emotion-10:read-only {
  color: #696969;
}

.emotion-10 input:-webkit-autofill,
.emotion-10 input:-webkit-autofill:hover,
.emotion-10 input:-webkit-autofill:focus,
.emotion-10 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-10[readonly]::-webkit-input-placeholder {
  color: transparent;
}

.emotion-10[readonly]::-moz-placeholder {
  color: transparent;
}

.emotion-10[readonly]:-ms-input-placeholder {
  color: transparent;
}

.emotion-10[readonly]:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-10[readonly]:focus::-moz-placeholder {
  color: transparent;
}

.emotion-10[readonly]:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-10[readonly]::placeholder,
.emotion-10[readonly]:focus::placeholder {
  color: transparent;
}

.emotion-10::-webkit-input-placeholder {
  color: transparent;
}

.emotion-10::-moz-placeholder {
  color: transparent;
}

.emotion-10:-ms-input-placeholder {
  color: transparent;
}

.emotion-10::placeholder {
  color: transparent;
}

.emotion-10:disabled {
  color: #a9a9a9;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
        disabled=""
      >
        <div
          class="emotion-6"
          data-testid="label-1-text-field"
        >
          <div
            class="emotion-7"
          >
            <label
              class="emotion-8"
              data-testid="label-field"
              for="label-1"
              scale="standard"
            >
              label 1
            </label>
            <div
              class="emotion-9"
              data-testid="label-1-text-field-wrapper"
            >
              <input
                class="emotion-10"
                data-error="false"
                data-testid="label-1-text-field-input"
                id="label-1"
                name="label-1"
                scale="standard"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a form with display flex 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #252525;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-6:has(input[disabled]) i,
.emotion-6:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-6:has(input[readonly]:not(input[disabled])) i,
.emotion-6:has(input[readonly]:not(input[disabled])) label,
.emotion-6:has(input[readonly]:not(input[disabled])) label>span {
  color: #696969;
}

.emotion-6 false input[type="search"]::-webkit-search-decoration,
.emotion-6 input[type="search"]::-webkit-search-cancel-button,
.emotion-6 input[type="search"]::-webkit-search-results-button,
.emotion-6 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0;
}

.emotion-8 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #696969;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  color: #252525;
  background-color: #e6e6e6;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-9:focus-within,
.emotion-9:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-9:hover:([disabled]) {
  border: 1px solid #c5c5c5;
}

.emotion-9:has(input[readonly]:not([disabled])) {
  background-color: #f2f2f2;
  border: 1px solid #e6e6e6;
}

.emotion-9:has(input[readonly]:not([disabled])):focus-within,
.emotion-9:has(input[readonly]:not([disabled])):hover {
  border: 1px solid #00677f;
}

.emotion-9:has(input[disabled]),
.emotion-9:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-9:has(input[disabled]):hover,
.emotion-9:has(input[disabled])>*:hover {
  border-color: #c5c5c5;
}

.emotion-9:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-9:has(input[disabled]) input::placeholder,
.emotion-9:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-10 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  color: #252525;
  padding: 28px 12px 12px;
}

.emotion-10:focus {
  outline: none;
}

.emotion-10:-moz-read-only {
  color: #696969;
}

.emotion-10:read-only {
  color: #696969;
}

.emotion-10 input:-webkit-autofill,
.emotion-10 input:-webkit-autofill:hover,
.emotion-10 input:-webkit-autofill:focus,
.emotion-10 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-10[readonly]::-webkit-input-placeholder {
  color: transparent;
}

.emotion-10[readonly]::-moz-placeholder {
  color: transparent;
}

.emotion-10[readonly]:-ms-input-placeholder {
  color: transparent;
}

.emotion-10[readonly]:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-10[readonly]:focus::-moz-placeholder {
  color: transparent;
}

.emotion-10[readonly]:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-10[readonly]::placeholder,
.emotion-10[readonly]:focus::placeholder {
  color: transparent;
}

.emotion-10::-webkit-input-placeholder {
  color: transparent;
}

.emotion-10::-moz-placeholder {
  color: transparent;
}

.emotion-10:-ms-input-placeholder {
  color: transparent;
}

.emotion-10::placeholder {
  color: transparent;
}

.emotion-10:disabled {
  color: #a9a9a9;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6"
          data-testid="label-1-text-field"
        >
          <div
            class="emotion-7"
          >
            <label
              class="emotion-8"
              data-testid="label-field"
              for="label-1"
              scale="standard"
            >
              label 1
            </label>
            <div
              class="emotion-9"
              data-testid="label-1-text-field-wrapper"
            >
              <input
                class="emotion-10"
                data-error="false"
                data-testid="label-1-text-field-input"
                id="label-1"
                name="label-1"
                scale="standard"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-6"
          data-testid="label-2-text-field"
        >
          <div
            class="emotion-7"
          >
            <label
              class="emotion-8"
              data-testid="label-field"
              for="label-2"
              scale="standard"
            >
              label 2
            </label>
            <div
              class="emotion-9"
              data-testid="label-2-text-field-wrapper"
            >
              <input
                class="emotion-10"
                data-error="false"
                data-testid="label-2-text-field-input"
                id="label-2"
                name="label-2"
                scale="standard"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a form with group title 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #252525;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-column-gap: 10px;
  column-gap: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000000;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width: 768px) {
  .emotion-7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-9:has(input[disabled]) i,
.emotion-9:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-9:has(input[readonly]:not(input[disabled])) i,
.emotion-9:has(input[readonly]:not(input[disabled])) label,
.emotion-9:has(input[readonly]:not(input[disabled])) label>span {
  color: #696969;
}

.emotion-9 false input[type="search"]::-webkit-search-decoration,
.emotion-9 input[type="search"]::-webkit-search-cancel-button,
.emotion-9 input[type="search"]::-webkit-search-results-button,
.emotion-9 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0;
}

.emotion-11 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #696969;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  color: #252525;
  background-color: #e6e6e6;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-12:focus-within,
.emotion-12:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-12:hover:([disabled]) {
  border: 1px solid #c5c5c5;
}

.emotion-12:has(input[readonly]:not([disabled])) {
  background-color: #f2f2f2;
  border: 1px solid #e6e6e6;
}

.emotion-12:has(input[readonly]:not([disabled])):focus-within,
.emotion-12:has(input[readonly]:not([disabled])):hover {
  border: 1px solid #00677f;
}

.emotion-12:has(input[disabled]),
.emotion-12:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-12:has(input[disabled]):hover,
.emotion-12:has(input[disabled])>*:hover {
  border-color: #c5c5c5;
}

.emotion-12:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-12:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-12:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-12:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-12:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-12:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-12:has(input[disabled]) input::placeholder,
.emotion-12:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-13 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  color: #252525;
  padding: 28px 12px 12px;
}

.emotion-13:focus {
  outline: none;
}

.emotion-13:-moz-read-only {
  color: #696969;
}

.emotion-13:read-only {
  color: #696969;
}

.emotion-13 input:-webkit-autofill,
.emotion-13 input:-webkit-autofill:hover,
.emotion-13 input:-webkit-autofill:focus,
.emotion-13 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-13[readonly]::-webkit-input-placeholder {
  color: transparent;
}

.emotion-13[readonly]::-moz-placeholder {
  color: transparent;
}

.emotion-13[readonly]:-ms-input-placeholder {
  color: transparent;
}

.emotion-13[readonly]:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-13[readonly]:focus::-moz-placeholder {
  color: transparent;
}

.emotion-13[readonly]:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-13[readonly]::placeholder,
.emotion-13[readonly]:focus::placeholder {
  color: transparent;
}

.emotion-13::-webkit-input-placeholder {
  color: transparent;
}

.emotion-13::-moz-placeholder {
  color: transparent;
}

.emotion-13:-ms-input-placeholder {
  color: transparent;
}

.emotion-13::placeholder {
  color: transparent;
}

.emotion-13:disabled {
  color: #a9a9a9;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <p
          class="emotion-6"
          color="primary.default"
          data-testid="typography"
          style="text-transform: uppercase;"
        >
          Group title
        </p>
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <div
          class="emotion-9"
          data-testid="label-1-text-field"
        >
          <div
            class="emotion-10"
          >
            <label
              class="emotion-11"
              data-testid="label-field"
              for="label-1"
              scale="standard"
            >
              label 1
            </label>
            <div
              class="emotion-12"
              data-testid="label-1-text-field-wrapper"
            >
              <input
                class="emotion-13"
                data-error="false"
                data-testid="label-1-text-field-input"
                id="label-1"
                name="label-1"
                scale="standard"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-9"
          data-testid="label-2-text-field"
        >
          <div
            class="emotion-10"
          >
            <label
              class="emotion-11"
              data-testid="label-field"
              for="label-2"
              scale="standard"
            >
              label 2
            </label>
            <div
              class="emotion-12"
              data-testid="label-2-text-field-wrapper"
            >
              <input
                class="emotion-13"
                data-error="false"
                data-testid="label-2-text-field-input"
                id="label-2"
                name="label-2"
                scale="standard"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
